temp/temp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-rp-temp
  namespace: ns-retailpulse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-rp-temp
  template:
    metadata:
      labels:
        app: mysql-rp-temp
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql            
          livenessProbe:
            exec:
              command: ["mysqladmin", "ping", "-h", "localhost"]
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            exec:
              command: ["mysqladmin", "ping", "-h", "localhost"]
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-temp-pvc
